fix spacing for desktop, still busted if too small

--- a/css/conformity.css
+++ b/css/conformity.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, .expandV {
     height: 100%;
 }
 
